chore: 优化 webui.py 文件中的函数文档，增加详细的参数和返回值说明，提升代码可读性和维护性。同时，修复 run_with_stream 函数的执行逻辑，确保任务可以在完成后继续重复执行，直到用户手动停止。更新模型名称列表，添加新的模型选项。

--- a/issues/01.md
+++ b/issues/01.md
@@ -10,12 +10,14 @@
 ### ✅ 高优先级（P0）
 
 1. **无限循环执行任务**
-   - 当前默认最多执行 200 步（step），达到上限后自动退出。
-   - **期望行为**：执行完当前 200 步后自动重置，从头开始新一轮任务，直至用户手动停止。
+   - 现在执行完 单次任务之后就不再执行
+   - **期望行为**：执行完单次任务后，继续重复执行，直到人为停止
+   - 涉及文件 webui.py 的 run_with_stream 函数
 
-2. **异常 step 重试策略优化**
-   - 当前单个 step 连续失败 3 次后程序退出。
-   - **期望行为**：即便失败，整体循环不中断，重新开始新一轮任务。
+2. **在执行任务时，异常 step 重试策略优化**
+   - 当前任务中，单个 step 连续失败 3 次后会退出任务。
+   - **期望行为**：即便失败，这次任务中断，整体循环不中断，重新开始新一轮任务。
+   - 涉及文件 webui.py 的 run_with_stream 函数
 
 3. **配置文件导入导出持久化**
    - 当前配置需手动填写，每次刷新程序或重启丢失数据。
